tests/test_files/invalid/semantic/attribute_defined_mulitple_times.pfdl
Struct TestStruct
    attribute: number
    attribute: string # Name of the attribute is already assigned
End